# lambda/src/main/java/michaelpotocar/projectkitty/dynamodb/model/Account.java
@@ -1,60 +1,27 @@
 package michaelpotocar.projectkitty.dynamodb.model;
 
-import com.amazonaws.services.dynamodbv2.datamodeling.*;
+import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAttribute;
+import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBDocument;
 
-@DynamoDBTable(
-        tableName = "Accounts"
-)
+@DynamoDBDocument
 public class Account {
-    private Long customerId;
-    private String accountId;
-    private Long accountNumber;
-    private Long routingNumber;
-    private Double balance;
-    private String nickname;
-    private String type;
-    private Long creditLimit;
+    String accountId;
+    Long accountNumber;
+    Long routingNumber;
+    Long creditLimit;
+    String nickname;
+    String type;
+    Double balance;
 
     public Account() {
     }
 
-    public Account(Long customerId, String accountId) {
-        this.setCustomerId(customerId);
-        this.setAccountId(accountId);
-    }
-
-    @DynamoDBHashKey(attributeName = "customerId")
-    public Long getCustomerId() {
-        return this.customerId;
-    }
-    public void setCustomerId(Long customerId) {this.customerId = customerId;}
-
-    @DynamoDBRangeKey(attributeName = "accountId")
+    @DynamoDBAttribute(attributeName = "accountId")
     public String getAccountId() {
         return this.accountId;
     }
     public void setAccountId(String accountId) {
         this.accountId = accountId;
-    }
-
-    @DynamoDBAttribute(attributeName = "accountNumber")
-    public Long getAccountNumber() {return accountNumber;}
-    public void setAccountNumber(Long accountNumber) {this.accountNumber = accountNumber;}
-
-    @DynamoDBAttribute(attributeName = "routingNumber")
-    public Long getRoutingNumber() {
-        return this.routingNumber;
-    }
-    public void setRoutingNumber(Long routingNumber) {
-        this.routingNumber = routingNumber;
-    }
-
-    @DynamoDBAttribute(attributeName = "balance")
-    public Double getBalance() {
-        return this.balance;
-    }
-    public void setBalance(Double balance) {
-        this.balance = balance;
     }
 
     @DynamoDBAttribute(attributeName = "nickname")
@@ -73,11 +40,36 @@ public class Account {
         this.type = type;
     }
 
-    @DynamoDBAttribute(attributeName = "creditLimit")
-    public Long getCreditLimit() {
-        return this.creditLimit;
+    @DynamoDBAttribute(attributeName = "balance")
+    public Double getBalance() {
+        return this.balance;
     }
-    public void setCreditLimit(Long creditLimit) {
-        this.creditLimit = creditLimit;
+    public void setBalance(Double balance) {
+        this.balance = balance;
+    }
+
+    @DynamoDBAttribute(attributeName = "accountNumber")
+    public Long getAccountNumber() {return accountNumber;}
+    public void setAccountNumber(Long accountNumber) {this.accountNumber = accountNumber;}
+
+    @DynamoDBAttribute(attributeName = "routingNumber")
+    public Long getRoutingNumber() {return routingNumber;}
+    public void setRoutingNumber(Long routingNumber) {this.routingNumber = routingNumber;}
+
+    @DynamoDBAttribute(attributeName = "creditLimit")
+    public Long getCreditLimit() {return creditLimit;}
+    public void setCreditLimit(Long creditLimit) {this.creditLimit = creditLimit;}
+
+    @Override
+    public String toString() {
+        return "Account{" +
+                "accountId='" + accountId + '\'' +
+                ", accountNumber=" + accountNumber +
+                ", routingNumber=" + routingNumber +
+                ", creditLimit=" + creditLimit +
+                ", nickname='" + nickname + '\'' +
+                ", type='" + type + '\'' +
+                ", balance=" + balance +
+                '}';
     }
 }
